--- a/src/index.css
+++ b/src/index.css
@@ -320,12 +320,13 @@ code {
 /*ONLY FOR THE SMALLEST WINDOW SIZE, PONERLO INSIDE INVISI MEDIA*/
 .infodiv {
   height: 55px;
-  width: 100px;
+  width:200px;
   margin-top: 40px;
   position: relative;
   /* outline: solid 0.25rem hsla(210, 100%, 100%, 0.5); */
   display: flex;
   align-items: center;
+  z-index: 9000;
 }
 
 .image {
@@ -418,6 +419,7 @@ list-style-type:none;
 
 .acito {
  align-items: center;
+ 
 }
 
 
